@@ -219,9 +219,10 @@ MediaDeviceCache::slotAddSolidDevice( const QString &udi )
     else if( const Solid::GenericInterface *generic = device.as<Solid::GenericInterface>() )
     {
         const QMap<QString, QVariant> properties = generic->allProperties();
-        // iPods touch 3G (and maybe upper) do not have AFC capabilities. 
-        // Due to the return, iPod Touch are not known as media device and the code which execute the ifuse command is then not called!
-        if ( !device.product().contains("iPod") )
+        /* At least iPod touch 3G and iPhone 3G do not advertise AFC (Apple File
+         * Connection) capabilities. Therefore we have to white-list them so that they are
+         * still recognised ad iPods */
+        if ( !device.product().contains("iPod") && !device.product().contains("iPhone"))
         {
             if( !properties.contains("info.capabilities") )
             {
